# gemrb

./: CMakeLists.txt  Dockerfile
.devcontainer/: devcontainer.json
admin/: make_formation.py
cmake/modules/: FindSDL2.cmake
gemrb/GUIScripts/: DualClass.py  GUIClasses.py  GUICommon.py  GUICommonWindows.py  GUIMA.py  GUIMG.py  GUIOPT.py  GUIREC.py  LUProfsSelection.py  LUSpellSelection.py  LevelUp.py  Spellbook.py  include.py
gemrb/GUIScripts/bg1/: CharGenCommon.py  CharGenGui.py  GUICG4.py  GUIMP.py
gemrb/GUIScripts/bg2/: CharGen6.py  CharGenEnd.py  GUICG15.py  GUICG3.py  GUICG4.py  GUIJRNL.py  LUHLASelection.py  Start.py
gemrb/GUIScripts/demo/: Tests.py
gemrb/GUIScripts/iwd/: CharGen.py
gemrb/GUIScripts/iwd2/: Appearance.py  CharGen4.py  Enemy.py  GUIREC.py  GUISPL.py  IDLUCommon.py
gemrb/GUIScripts/pst/: FloatMenuWindow.py  GUIINV.py  GUIJRNL.py  GUIMG.py  GUIOPT.py  GUIREC.py  GUIWORLD.py  Maze.py  NewLife.py
gemrb/core/: Interface.cpp
gemrb/core/Scriptable/: Actor.cpp
gemrb/plugins/GUIScript/: CMakeLists.txt  GUIScript.cpp  PythonHelpers.cpp  PythonHelpers.h
gemrb/plugins/SDLVideo/: SDLVideo.cpp
gemrb/unhardcoded/bg2/: gemrb.ini
