INCLUDE_DIRECTORIES(${Python_INCLUDE_DIRS})
ADD_GEMRB_PLUGIN (GUIScript GUIScript.cpp PythonHelpers.cpp)
IF(MINGW AND CMAKE_SIZEOF_VOID_P EQUAL 8)
	ADD_DEFINITIONS(-DMS_WIN64)
ENDIF()
# remove this once we move to python3
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-strict-aliasing")
MESSAGE("PYTHON_LIBRARIES = ${Python_LIBRARIES}")
TARGET_LINK_LIBRARIES(GUIScript ${Python_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS})
